--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.pythonPath": "C:\\Users\\Aakanksh\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
+	"python.pythonPath": "C:\\Users\\Tejpal Singh\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
 }
